--- a/index.html
+++ b/index.html
@@ -1,317 +1,310 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Platformer Deluxe</title>
+<title>Platformer Challenge</title>
 <style>
-body{margin:0;background:#111;color:white;font-family:Arial;text-align:center}
-canvas{background:#222;display:block;margin:0 auto;border:2px solid #555}
+body{margin:0;background:black;color:white;font-family:monospace;text-align:center}
+canvas{background:#111;display:block;margin:auto;border:2px solid white}
+#ui{padding:6px}
+button{font-size:16px;margin:4px}
 </style>
 </head>
 <body>
-<h2>Platformer Deluxe</h2>
+
+<div id="ui">
+Coins: <span id="coins">0</span> |
+Level: <span id="level">1</span> |
+Time: <span id="time">0.0</span>s
+<br>
+<button onclick="openShop()">Shop</button>
+<button onclick="closeShop()">Back</button>
+<div id="shop" style="display:none"></div>
+</div>
+
 <canvas id="game" width="900" height="500"></canvas>
 
 <script>
 const canvas=document.getElementById("game");
 const ctx=canvas.getContext("2d");
 
+let gravity=0.5;
 let keys={};
+let level=0;
+let startTime=Date.now();
+let coins=0;
+let playerSkin="white";
+
+let skins={
+white:{color:"white",price:0},
+red:{color:"red",price:10},
+blue:{color:"cyan",price:15},
+gold:{color:"gold",price:25},
+purple:{color:"violet",price:35}
+};
+
+let owned=["white"];
+
 document.addEventListener("keydown",e=>keys[e.key]=true);
 document.addEventListener("keyup",e=>keys[e.key]=false);
 
-// -------- PLAYER / STATS ----------
-let coins=0;
-let totalCoins=0;
-let deaths=0;
-let startTime=null;
-let finished=false;
-
-let skins=[
-{name:"Cyan",color:"cyan",cost:0,owned:true},
-{name:"Red",color:"red",cost:15},
-{name:"Green",color:"lime",cost:25},
-{name:"Gold",color:"gold",cost:40},
-{name:"Void",color:"white",cost:60}
-];
-let currentSkin=0;
-
-let shopOpen=false;
-
-let gravity=0.5;
-let jumpPower=9;
-let maxJumpHold=18;
-
-let levelIndex=0;
-
-// ---------- LEVELS (10) ----------
-function makeCoins(arr){
-return arr.map(c=>({x:c[0],y:c[1],r:8,taken:false}));
+class Player{
+constructor(){
+this.reset();
 }
+reset(){
+this.x=50;
+this.y=400;
+this.w=30;
+this.h=30;
+this.vx=0;
+this.vy=0;
+this.speed=3;
+this.jumpPower=8;
+this.onGround=false;
+this.jumpHold=0;
+this.maxJumps=2;   // DOUBLE JUMP ENABLED
+this.jumpsLeft=2;
+}
+update(){
+this.vx=0;
 
-const levels=[
-{theme:"grass",start:{x:50,y:420},goal:{x:820,y:380,w:40,h:40},
-platforms:[{x:0,y:460,w:900,h:40},{x:250,y:380,w:120,h:20},{x:500,y:300,w:120,h:20}],
-coins:makeCoins([[300,350],[550,270]])},
+if(keys["ArrowLeft"]) this.vx=-this.speed;
+if(keys["ArrowRight"]) this.vx=this.speed;
 
-{theme:"ice",start:{x:50,y:420},goal:{x:820,y:100,w:40,h:40},
-platforms:[{x:0,y:460,w:900,h:40},{x:200,y:350,w:120,h:20},{x:450,y:250,w:120,h:20},{x:650,y:170,w:120,h:20}],
-coins:makeCoins([[240,320],[500,220],[700,140]])},
+this.x+=this.vx;
+this.vy+=gravity;
+this.y+=this.vy;
 
-{theme:"wall",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
-platforms:[{x:0,y:460,w:900,h:40},{x:350,y:340,w:20,h:120},{x:550,y:220,w:20,h:120}],
-coins:makeCoins([[380,300],[580,180]])},
+this.onGround=false;
 
-{theme:"lava",start:{x:50,y:420},goal:{x:820,y:80,w:40,h:40},
-platforms:[{x:0,y:460,w:900,h:40},{x:200,y:360,w:100,h:20},{x:350,y:280,w:100,h:20},{x:520,y:200,w:100,h:20}],
-coins:makeCoins([[240,330],[380,250],[550,170]])},
+for(let p of platforms){
+if(this.x<p.x+p.w && this.x+this.w>p.x &&
+   this.y<p.y+p.h && this.y+this.h>p.y){
 
-{theme:"sky",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
-platforms:[{x:0,y:460,w:900,h:40},{x:250,y:340,w:80,h:20},{x:450,y:260,w:80,h:20},{x:650,y:180,w:80,h:20}],
-coins:makeCoins([[280,310],[480,230],[680,150]])},
-
-{theme:"hard1",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
-platforms:[{x:0,y:460,w:900,h:40},{x:200,y:380,w:80,h:20},{x:350,y:320,w:80,h:20},{x:520,y:260,w:80,h:20}],
-coins:makeCoins([[230,350],[380,290],[560,230]])},
-
-{theme:"hard2",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
-platforms:[{x:0,y:460,w:900,h:40},{x:300,y:350,w:20,h:120},{x:600,y:200,w:20,h:120}],
-coins:makeCoins([[330,300],[630,150]])},
-
-{theme:"speed",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
-platforms:[{x:0,y:460,w:900,h:40},{x:200,y:350,w:100,h:20},{x:500,y:250,w:100,h:20}],
-coins:makeCoins([[230,320],[530,220]])},
-
-{theme:"insane",start:{x:50,y:420},goal:{x:820,y:60,w:40,h:40},
-platforms:[{x:0,y:460,w:900,h:40},{x:350,y:350,w:80,h:20},{x:600,y:250,w:80,h:20}],
-coins:makeCoins([[380,320],[630,220]])},
-
-{theme:"boss",start:{x:50,y:420},goal:null,
-platforms:[{x:0,y:460,w:900,h:40},{x:300,y:350,w:120,h:20},{x:600,y:250,w:120,h:20}],
-coins:makeCoins([[330,320],[650,220]])}
-];
-
-// -------- PLAYER --------
-let player;
-let boss;
-let shots=[];
-
-function resetPlayer(){
-const s=levels[levelIndex].start;
-player={x:s.x,y:s.y,w:22,h:22,vx:0,vy:0,onGround:false,jumps:2,hold:0,wall:false};
-boss=null;
-shots=[];
-
-if(levels[levelIndex].theme==="boss"){
-boss={x:750,y:380,w:40,h:40,hp:8,cd:0};
+if(this.vy>0 && this.y+this.h-p.y<20){
+this.y=p.y-this.h;
+this.vy=0;
+this.onGround=true;
+this.jumpsLeft=this.maxJumps;
+}
+else if(this.vy<0){
+this.vy=0;
 }
 }
-resetPlayer();
+}
 
-// -------- SHOP ----------
+for(let w of walls){
+if(this.x<w.x+w.w && this.x+this.w>w.x &&
+   this.y<w.y+w.h && this.y+this.h>w.y){
+
+// wall jump
+if(keys["ArrowUp"] && this.jumpsLeft>0){
+this.vy=-10;
+this.vx = (this.x < w.x ? -6 : 6);
+this.jumpsLeft--;
+}
+}
+}
+
+// Jump press
+if(keys["ArrowUp"] && !this.jumpHeld){
+if(this.jumpsLeft>0){
+this.vy=-this.jumpPower;
+this.jumpHold=0;
+this.jumpsLeft--;
+}
+}
+this.jumpHeld=keys["ArrowUp"];
+
+// hold jump higher
+if(keys["ArrowUp"] && this.jumpHold<12){
+this.vy-=0.35;
+this.jumpHold++;
+}
+
+if(this.y>canvas.height) die();
+
+for(let s of spikes){
+if(this.x<s.x+s.w && this.x+this.w>s.x &&
+   this.y<s.y+s.h && this.y+this.h>s.y) die();
+}
+
+for(let c of coinList){
+if(!c.got &&
+this.x<c.x+10 && this.x+this.w>c.x &&
+this.y<c.y+10 && this.y+this.h>c.y){
+c.got=true;
+coins++;
+updateUI();
+}
+}
+
+if(this.x>goal.x && this.y>goal.y &&
+this.x<goal.x+40 && this.y<goal.y+40){
+nextLevel();
+}
+}
+draw(){
+ctx.fillStyle=skins[playerSkin].color;
+ctx.fillRect(this.x,this.y,this.w,this.h);
+}
+}
+
+let player=new Player();
+let platforms=[],spikes=[],walls=[],coinList=[],goal={x:850,y:400};
+
+function generateLevel(lv){
+platforms=[];spikes=[];walls=[];coinList=[];
+player.reset();
+
+let difficulty=lv+1;
+
+for(let i=0;i<5+difficulty;i++){
+platforms.push({
+x:Math.random()*800,
+y:Math.random()*400,
+w:80+Math.random()*80,
+h:15
+});
+}
+
+for(let i=0;i<difficulty;i++){
+spikes.push({
+x:150+i*120,
+y:470,
+w:40,h:30
+});
+}
+
+if(lv>=2){
+for(let i=0;i<3;i++){
+walls.push({x:300+i*150,y:300,w:20,h:200});
+}
+}
+
+for(let i=0;i<5;i++){
+coinList.push({x:100+i*140,y:200-Math.random()*120,got:false});
+}
+
+goal={x:820,y:80};
+}
+
+// boss level
+function bossLevel(){
+platforms=[{x:0,y:460,w:900,h:40}];
+spikes=[];
+walls=[];
+coinList=[];
+goal={x:820,y:420};
+
+boss={x:400,y:400,w:60,h:60,hp:10};
+}
+
+function die(){
+player.reset();
+}
+
+function nextLevel(){
+level++;
+if(level==10){
+bossLevel();
+}else if(level>10){
+alert("YOU WIN! Time: "+((Date.now()-startTime)/1000).toFixed(2)+"s");
+level=1;
+startTime=Date.now();
+generateLevel(level);
+}else{
+generateLevel(level);
+}
+updateUI();
+}
+
+function draw(){
+ctx.clearRect(0,0,canvas.width,canvas.height);
+
+// theme backgrounds
+let themes=["#111","#102030","#201020","#203010","#301010","#002222","#220022","#222200","#003300","#000"];
+ctx.fillStyle=themes[level%themes.length];
+ctx.fillRect(0,0,canvas.width,canvas.height);
+
+ctx.fillStyle="white";
+for(let p of platforms) ctx.fillRect(p.x,p.y,p.w,p.h);
+
+ctx.fillStyle="red";
+for(let s of spikes) ctx.fillRect(s.x,s.y,s.w,s.h);
+
+ctx.fillStyle="gray";
+for(let w of walls) ctx.fillRect(w.x,w.y,w.w,w.h);
+
+ctx.fillStyle="gold";
+for(let c of coinList) if(!c.got) ctx.fillRect(c.x,c.y,10,10);
+
+ctx.fillStyle="lime";
+ctx.fillRect(goal.x,goal.y,40,40);
+
+if(level==10 && boss){
+ctx.fillStyle="purple";
+ctx.fillRect(boss.x,boss.y,boss.w,boss.h);
+
+if(player.x<boss.x+boss.w && player.x+player.w>boss.x &&
+player.y<boss.y+boss.h && player.y+player.h>boss.y){
+boss.hp--;
+player.vy=-8;
+if(boss.hp<=0){
+alert("Boss defeated!");
+nextLevel();
+}
+}
+}
+
+player.update();
+player.draw();
+
+document.getElementById("time").innerText=
+((Date.now()-startTime)/1000).toFixed(1);
+
+requestAnimationFrame(draw);
+}
+
+function updateUI(){
+document.getElementById("coins").innerText=coins;
+document.getElementById("level").innerText=level;
+}
+
 function openShop(){
-shopOpen=true;
+document.getElementById("shop").style.display="block";
+let html="<b>Skins</b><br>";
+for(let k in skins){
+let s=skins[k];
+if(!owned.includes(k)){
+html+=`<button onclick="buy('${k}')">${k} (${s.price})</button>`;
+}else{
+html+=`<button onclick="equip('${k}')">Use ${k}</button>`;
+}
+}
+document.getElementById("shop").innerHTML=html;
 }
 function closeShop(){
-shopOpen=false;
-levelIndex++;
-if(levelIndex>=levels.length){finished=true;return;}
-resetPlayer();
+document.getElementById("shop").style.display="none";
 }
 
-// -------- UPDATE ----------
-function update(){
-if(finished)return;
-if(!startTime)startTime=performance.now();
-
-if(shopOpen){
-if(keys["1"]) buyOrSelect(1);
-if(keys["2"]) buyOrSelect(2);
-if(keys["3"]) buyOrSelect(3);
-if(keys["4"]) buyOrSelect(4);
-if(keys["Enter"]) closeShop();
-return;
-}
-
-let lvl=levels[levelIndex];
-
-// movement
-let accel=0.6;
-if(lvl.theme==="ice") accel=0.2;
-
-if(keys["ArrowLeft"]) player.vx-=accel;
-if(keys["ArrowRight"]) player.vx+=accel;
-player.vx*=0.9;
-
-if(keys["ArrowUp"]&&player.jumps>0){
-player.vy=-jumpPower;
-player.jumps--;
-player.hold=0;
-}
-if(keys["ArrowUp"]&&player.hold<maxJumpHold&&player.vy<0){
-player.vy-=0.3;
-player.hold++;
-}
-
-player.vy+=gravity;
-player.x+=player.vx;
-player.y+=player.vy;
-
-player.onGround=false;
-player.wall=false;
-
-for(const p of lvl.platforms){
-if(player.x<p.x+p.w&&player.x+player.w>p.x&&
-player.y+player.h>p.y&&player.y+player.h<p.y+20&&player.vy>=0){
-player.y=p.y-player.h;
-player.vy=0;
-player.onGround=true;
-player.jumps=2;
-}
-}
-
-// coins
-for(const c of lvl.coins){
-if(!c.taken &&
-player.x<c.x+10 && player.x+player.w>c.x-10 &&
-player.y<c.y+10 && player.y+player.h>c.y-10){
-c.taken=true;
-coins++;
-totalCoins++;
-}
-}
-
-// goal
-if(lvl.goal){
-let g=lvl.goal;
-if(player.x<g.x+g.w&&player.x+player.w>g.x&&
-player.y<g.y+g.h&&player.y+player.h>g.y){
+function buy(name){
+let s=skins[name];
+if(coins>=s.price){
+coins-=s.price;
+owned.push(name);
+updateUI();
 openShop();
 }
 }
-
-// boss
-if(lvl.theme==="boss" && boss){
-boss.cd--;
-if(boss.cd<=0){
-boss.cd=50;
-shots.push({x:boss.x,y:boss.y+10,vx:-6});
-}
-for(const s of shots){
-s.x+=s.vx;
-if(player.x<s.x+10&&player.x+player.w>s.x&&
-player.y<s.y+10&&player.y+player.h>s.y){
-deaths++; resetPlayer(); return;
-}
-}
-if(player.x>boss.x-20&&player.y>boss.y-20){
-boss.hp--;
-player.vx=-6;
-if(boss.hp<=0){finished=true;}
-}
+function equip(name){
+playerSkin=name;
 }
 
-if(player.y>600){deaths++;resetPlayer();}
-}
-
-// -------- SHOP BUY ----------
-function buyOrSelect(i){
-let s=skins[i];
-if(!s) return;
-if(!s.owned){
-if(coins>=s.cost){coins-=s.cost; s.owned=true;}
-}else currentSkin=i;
-}
-
-// -------- DRAW ----------
-function draw(){
-ctx.clearRect(0,0,900,500);
-
-if(finished){
-ctx.fillStyle="white";
-ctx.font="50px Arial";
-ctx.fillText("YOU WIN",350,220);
-let t=((performance.now()-startTime)/1000).toFixed(2);
-ctx.font="30px Arial";
-ctx.fillText("Time: "+t+"s",380,270);
-ctx.fillText("Deaths: "+deaths,380,310);
-ctx.fillText("Coins: "+totalCoins,380,350);
-return;
-}
-
-if(shopOpen){
-ctx.fillStyle="black";
-ctx.fillRect(0,0,900,500);
-ctx.fillStyle="white";
-ctx.font="40px Arial";
-ctx.fillText("SHOP",380,80);
-ctx.font="20px Arial";
-ctx.fillText("Coins: "+coins,20,40);
-ctx.fillText("Press number to buy/select. Enter to continue.",200,450);
-
-skins.forEach((s,i)=>{
-ctx.fillStyle=s.color;
-ctx.fillRect(200,140+i*60,40,40);
-ctx.fillStyle="white";
-let txt=s.name+" ";
-if(!s.owned) txt+="Cost:"+s.cost;
-else txt+="Owned";
-if(i===currentSkin) txt+=" (equipped)";
-ctx.fillText((i)+": "+txt,260,170+i*60);
-});
-return;
-}
-
-// level draw
-let lvl=levels[levelIndex];
-ctx.fillStyle="#222";
-ctx.fillRect(0,0,900,500);
-
-// platforms
-ctx.fillStyle="#888";
-for(const p of lvl.platforms) ctx.fillRect(p.x,p.y,p.w,p.h);
-
-// coins
-ctx.fillStyle="gold";
-for(const c of lvl.coins) if(!c.taken){
-ctx.beginPath();
-ctx.arc(c.x,c.y,8,0,Math.PI*2);
-ctx.fill();
-}
-
-// boss
-if(lvl.theme==="boss" && boss){
-ctx.fillStyle="purple";
-ctx.fillRect(boss.x,boss.y,boss.w,boss.h);
-ctx.fillStyle="red";
-for(const s of shots) ctx.fillRect(s.x,s.y,10,10);
-ctx.fillStyle="white";
-ctx.fillText("Boss HP:"+boss.hp,720,30);
-}
-
-// goal
-if(lvl.goal){
-ctx.fillStyle="lime";
-let g=lvl.goal;
-ctx.fillRect(g.x,g.y,g.w,g.h);
-}
-
-// player
-ctx.fillStyle=skins[currentSkin].color;
-ctx.fillRect(player.x,player.y,player.w,player.h);
-
-// UI
-let t=((performance.now()-startTime)/1000).toFixed(2);
-ctx.fillStyle="white";
-ctx.font="18px Arial";
-ctx.fillText("Time:"+t,10,20);
-ctx.fillText("Coins:"+coins,10,40);
-ctx.fillText("Deaths:"+deaths,10,60);
-ctx.fillText("Level:"+(levelIndex+1)+"/10",10,80);
-}
-
-function loop(){update();draw();requestAnimationFrame(loop);}
-loop();
+level=1;
+generateLevel(level);
+updateUI();
+draw();
 </script>
 </body>
 </html>
